@@ -79,6 +79,9 @@ global_cxxflags :=
 corekit_cflags :=
 corekit_cppflags :=
 JSCORE_GIRSOURCES :=
+WEBKIT_GIRSOURCES :=
+typelibsdir :=
+typelibs_DATA :=
 EXTRA_DIST :=
 BUILT_SOURCES :=
 CLEANFILES :=
@@ -421,8 +424,13 @@ pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = WebKit/gtk/webkit-1.0.pc
 
 if ENABLE_INTROSPECTION
-JSCORE_GIRSOURCES += $(srcdir)/WebKit/gtk/JSCore-1.0.gir # JSCore-1.0.gir is handwritten
-WEBKIT_GIRSOURCES = WebKit-1.0.gir
+JSCORE_GIRSOURCES += JSCore-1.0.gir
+WEBKIT_GIRSOURCES += WebKit-1.0.gir
+
+# JSCore-1.0.gir is handwritten - this is a hack to make the typelib
+# generation work during make dist
+JSCore-1.0.gir: $(srcdir)/WebKit/gtk/JSCore-1.0.gir
+	cp $(srcdir)/WebKit/gtk/JSCore-1.0.gir $(builddir)/
 
 $(WEBKIT_GIRSOURCES): $(JSCORE_GIRSOURCES) $(G_IR_SCANNER)
 	$(AM_V_GEN)$(G_IR_SCANNER) -v --namespace WebKit --nsversion=1.0 \
@@ -445,14 +453,14 @@ $(WEBKIT_GIRSOURCES): $(JSCORE_GIRSOURCES) $(G_IR_SCANNER)
 girdir = $(GIRDIR)
 gir_DATA = $(WEBKIT_GIRSOURCES) $(JSCORE_GIRSOURCES)
 
-typelibsdir = $(GIRTYPELIBDIR)
-typelibs_DATA = $(JSCORE_GIRSOURCES:.gir=.typelib) $(WEBKIT_GIRSOURCES:.gir=.typelib)
+typelibsdir += $(GIRTYPELIBDIR)
+typelibs_DATA += $(JSCORE_GIRSOURCES:.gir=.typelib) $(WEBKIT_GIRSOURCES:.gir=.typelib)
 
 %.typelib: %.gir $(G_IR_COMPILER)
 	$(AM_V_GEN)$(G_IR_COMPILER) --includedir $(top_srcdir)/WebKit/gtk $< -o $@
 
 EXTRA_DIST += $(JSCORE_GIRSOURCES)
-CLEANFILES += $(WEBKIT_GIRSOURCES) $(typelibs_DATA)
+CLEANFILES += $(JSCORE_GIRSOURCES) $(WEBKIT_GIRSOURCES) $(typelibs_DATA)
 
 endif
 
